--- a/browser/index.html
+++ b/browser/index.html
@@ -15,7 +15,7 @@
 
 	</head>
 
-	<div class='container'>
+	<div ng-app='UGS' class='container'>
 		<ul class='nav nav-tabs'>
 			<li role='presentation' ui-sref-active='active'> <a ui-sref='home'> Home </a> </li>
 			<li role='presentation' ui-sref-active='active'> <a ui-sref='users'> User </a> </li>
