--- a/browser/index.html
+++ b/browser/index.html
@@ -9,16 +9,12 @@
 		<script src='/services/AuthService.js'></script>
 		<script src='/services/GroupService.js'></script>
 		<script src='/services/UserService.js'></script>
+		<script src='directives/appNav.js'></script>
 
 	</head>
 
-	<div ng-app='app' class='container'>
-		<ul class='nav nav-tabs'>
-			<li role='presentation' ui-sref-active='active'> <a ui-sref='home'> Home </a> </li>
-			<li ng-if="user.id" role='presentation' ui-sref-active='active'> <a ui-sref='settings'> Settings </a> </li>
-			<li ng-if="user.id" role='presentation' ui-sref-active='active'> <a ng-click="logout()" ui-sref='settings'> Settings </a> </li>
-			<li ng-if="!user.id" role='presentation' ui-sref-active='active'> <a ui-sref='login'> Login </a> </li>
-		</ul>
+	<div ng-app="app">
+		<app-nav></app-nav>
 		<ui-view></ui-view>
 	</div>
 </html>
